--- a/package.json
+++ b/package.json
@@ -1,17 +1,42 @@
 {
+  "name": "sowapp",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "init-data": "ts-node src/scripts/initData.ts"
+  },
   "dependencies": {
-    "@headlessui/react": "^2.2.2",
-    "@heroicons/react": "^2.2.0",
-    "@hookform/resolvers": "^5.0.1",
-    "@types/leaflet": "^1.9.17",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
+    "@hookform/resolvers": "^3.3.4",
+    "@types/leaflet": "^1.9.8",
     "@types/react-leaflet": "^2.8.3",
-    "date-fns": "^4.1.0",
-    "firebase": "^11.7.1",
+    "date-fns": "^3.3.1",
+    "firebase": "^10.8.0",
     "leaflet": "^1.9.4",
+    "next": "14.1.0",
     "next-pwa": "^5.6.0",
-    "prettier": "^3.5.3",
-    "react-hook-form": "^7.56.3",
-    "react-leaflet": "^5.0.0",
-    "zod": "^3.24.4"
+    "react": "^18",
+    "react-dom": "^18",
+    "react-hook-form": "^7.50.1",
+    "react-leaflet": "^4.2.1",
+    "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "prettier": "^3.2.5",
+    "tailwindcss": "^3.3.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5"
   }
 }
